--- a/assets/css/results.css
+++ b/assets/css/results.css
@@ -1,5 +1,13 @@
 /******** COLOR THEMES *******/
+body{
+    
+  background-color: var(--clr-background);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+  line-height: 1.6;
+  color: var(--clr-text-dark);
+  margin: 0;
 
+}
 :root {
   --clr-background: #f3fff8;
   --clr-primary-dark: #0f766e;
@@ -152,9 +160,9 @@
 }
 
 .description p {
-    font-size: 1rem;
+    font-size: 1.3rem;
     line-height: 1.6;
-    color: #555;
+    color: black;
 }
 
 /* Severity legend */
