--- a/assets/css/assessment.css
+++ b/assets/css/assessment.css
@@ -311,3 +311,61 @@
     text-align: left;
   }
 }
+
+
+
+/******** CONSENT PAGE STYLING *******/
+
+.consent-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 60px 20px;
+  gap: 50px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+.consent-section {
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+
+.consent-section h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  color: var(--clr-text-dark);
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+/* === Assessment Card === */
+.consent-card {
+  width: 100%;
+  background-color: var(--clr-primary);
+  padding: 40px 30px;
+  border-radius: 16px;
+  box-sizing: border-box;
+}
+
+.consent-text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  color: var(--clr-white);
+}
+
+.consent-text p {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: var(--clr-white);
+  line-height: 1.6;
+  margin: 0;
+  text-align: center;
+  max-width: 90%;
+}
